Fixed z-index on donate button, Elements were covering it, never could trigger event listeners/interact with

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,10 @@ body {
     display: none;
 }
 
+.btn-donate {
+    z-index: 999;
+}
+
 header { // header content
     z-index: 499;
     max-height: 63.5px;
@@ -191,6 +195,7 @@ main { // main content
         background-image: none !important;
         position: relative;
         bottom: 100px;
+        z-index: 0;
         color: $color-bg;
 
         img {
@@ -221,6 +226,7 @@ main { // main content
             font-size: $font-size-medium;
             background-color: $color-secondary;
             color: $color-bg;
+            z-index: 2;
             border: none;
             cursor: pointer;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
